--- a/Spring/1.spring-ioc.md
+++ b/Spring/1.spring-ioc.md
@@ -586,7 +586,7 @@ public class IndexDaoImpl1 implements IndexDao {
 ````
 
 ````xml
-bean id="dao" class="com.spring.IndexDaoImpl0"/>
+<bean id="dao" class="com.spring.IndexDaoImpl0"/>
     <bean id="dao1" class="com.spring.IndexDaoImpl1"/>
 
     <bean id="service" class="com.spring.IndexService"/>
